# Big_Int_Project

./: README.md
big_int_all/: CMakeLists.txt  main2.c
big_int_all/big_int/: big_int.c  big_int.h
big_int_all/test/: test.c  test.h
